<resources>
    <string name="app_name">Shared Preference</string>
    <string name="name">Nama</string>
    <string name="default_name">No Name</string>
    <string name="email">Email</string>
    <string name="default_email">No Email</string>
    <string name="phone">Phone Number</string>
    <string name="default_phone">No Phone Number</string>
    <string name="age">Umur</string>
    <string name="default_age">No Age</string>
    <string name="tv_theme">Theme Mode</string>
    <string name="default_theme">System Default</string>
    <string name="setting">Setting</string>
    <string name="phone_number">No Telp</string>
    <string name="dark_theme">Tema Gelap</string>
    <string name="light_theme">Tema Cerah</string>
    <string name="yes">Ya</string>
    <string name="no">Tidak</string>
    <string name="save">Simpan</string>
    <string name="main_title">Setting</string>
    <string name="setting_page">Setting</string>
    <string name="field_required">Wajib Diisi</string>
    <string name="field_digit_only">Hanya Nomor</string>
    <string name="email_is_not_valid">Email tidak valid</string>
    <string name="golongan">Golongan Darah</string>
    <string name="default_golongan">No Blood Type</string>
    <string name="default_prodi">No Prodi</string>
    <string name="prodi">Prodi</string>
</resources>